# image_compression_for_competition

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md  result.xlsx  test.py
charls/include/: public_types.h
charls/src/: charls_jpegls_decoder.cpp  charls_jpegls_encoder.cpp  coding_parameters.h  jpeg_stream_reader.h  jpeg_stream_writer.h  jpegls_error.cpp  jpegls_preset_coding_parameters.h  quantization_lut.cpp  scan_decoder.h  util.h  validate_spiff_header.cpp  version.cpp
clzip/: AUTHORS  ChangeLog  INSTALL  Makefile.in  NEWS  README  configure  decoder.c  decoder.h  encoder.c  encoder.h  encoder_base.c  encoder_base.h  fast_encoder.c  fast_encoder.h  list.c  lzip.h  lzip_index.c  lzip_index.h  main.c
clzip/doc/: clzip.1  clzip.info  clzip.texi
clzip/testsuite/: check.sh
docs/: 景嘉微杯图像压缩与解压模型设计文档.docx
lzip/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  encoder_base.cpp  encoder_base.h  lzip.h  main.cpp
reference/: Makefile
src/: YUVConvert.cpp  YUVConvert.h  charlsWapper.cpp  charlsWapper.h  clzipWapper.c  clzipWapper.h  compressAlgorithm.cpp  compressAlgorithm.h  lzipWapper.cpp  lzipWapper.h  main.cpp  rgbTileProc.cpp  test.cpp
