cmake_minimum_required(VERSION 3.22)
project(image_compression_for_competition)

set(CMAKE_CXX_STANDARD 23)

include_directories(./src)
aux_source_directory(./src SRC)
#list(REMOVE_ITEM SRC "./src/main.cpp")
list(REMOVE_ITEM SRC "./src/test.cpp")
#include_directories(./jpeg-ls)
#aux_source_directory(./jpeg-ls JPEG_LS)
#list(REMOVE_ITEM JPEG_LS "./jpeg-ls/main.c")
aux_source_directory(./lzip LZIP)
include_directories(./lzip)
add_definitions(-DPROGVERSION="1.23")
#add_executable(image_compression_for_competition ${SRC} ${JPEG_LS} ${LZIP})
add_executable(image_compression_for_competition ${SRC} ${LZIP})
